--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
     <p>
       Any Questions? <br>
       Contact us 📞<br>
-      F-J: 083 465 7364<br>
-      Moné: 089 423 1194
+      Frans-Josef: 082 506 9530<br>
+      Moné: 083 673 9260
     </p>
     
   </footer>
