--- a/index.html
+++ b/index.html
@@ -106,31 +106,29 @@
       <div id="our-story-section">
         <h1 id="our-story-heading">How We Met</h1>
         <p id="our-story-paragraph">
-          If you would ask us where our relationship started, we would have to
-          give you multiple answers. But all we can say is that a few church
-          encounters and a dream team partnership in a horses and chariots
-          ice-breaker was the most memorable of them all.<br /><br />
+          If you would ask us where our relationship started, we would have to give you multiple answers. 
+          But all we can say is that a few church encounters and a dream team partnership in a horses 
+          and chariots ice-breaker was the most memorable of them all.<br /><br />
 
-          The question all of you may be asking: "Was it love at first sight?"
-          The answer is simple: no. After some convincing from a few friends,
-          Frans-Josef built up the courage to ask Moné on a coffee date. One
-          date became two, and two became three, and the rest we can call
-          history. Both confessed their feelings for each other, with Moné
-          obviously going first.<br /><br />
+          The question many of you may be asking: "Was it love at first sight?" The answer is simple: 
+          No, it was not. After some convincing from a few friends, Frans-Josef built up the courage 
+          to ask Moné on a coffee date. One date became two, and two became three, and the rest we 
+          can call history. Both of us confessed our feelings for each other, with Moné obviously 
+          going first.<br /><br />
 
-          After a short while they started dating while their love for each
-          other grew day by day. This was all due to the small adventures they
-          both endured. And we confess some "study breaks" where extended a few
+          On a cold and rainy Sunday on the 15th of May 2022,  Frans-Josef asked Moné to be his 
+          girlfriend. While we were dating, our love for each grew as we went on exciting small
+          adventures. And we confess some "15 minute study breaks" where extended a couple of 
           times to go and climb on building G3's rooftop and eat some ice cream.
           <br /><br />
 
-          Days became weeks, and weeks became months. A few calls and
-          arrangements were made and on the 13th of May, Frans-Josef decided to
-          pop the big question. If you have not noticed the ring on Moné's
-          finger and the wedding invitations, she said: "Yesss!".<br /><br />
+          We both knew thay one day we would tie the knot, but Moné could not prepare her 
+          for what happened next. A few calls and arrangements were made, and on the 13th 
+          of May, Frans-Josef decided to pop the big question. If you have not noticed the 
+          ring on Moné's finger and the wedding invitations, she said: "Yesss!".<br /><br />
 
-          All and all we are so excited about this new chapter in our lives and
-          happy to be able to share one of our special moments with all of you.
+          All in all, we are so excited about this new chapter in our lives and happy 
+          to be able to share one of our special moments with all of you
         </p>
       </div>
     </section>
